media/css/cms/flare26-kit-banner.css
/*
* This Source Code Form is subject to the terms of the Mozilla Public
* License, v. 2.0. If a copy of the MPL was not distributed with this
* file, You can obtain one at https://mozilla.org/MPL/2.0/.
*/

.fl-banner-kit {
    --kit-img: none; /* These are added with a utility class below. */
    --kit-banner-padding-bottom: var(--token-layout-3xs);
    --kit-img-size: min(90%, 400px) auto;
    --kit-banner-padding-right: var(--token-layout-3xs);
    --kit-img-position: bottom center;
    background-image: var(--kit-img), var(--token-gradient-purple);
    background-position: var(--kit-img-position), center;
    background-repeat: no-repeat, no-repeat;
    background-size: var(--kit-img-size), cover;
    border: none;
    color: var(--token-color-white);
    padding: calc(var(--fl-section-v-padding) * 2)
        var(--kit-banner-padding-right) var(--kit-banner-padding-bottom)
        var(--token-layout-3xs);
    position: relative;
}

.fl-banner-kit .fl-banner-content {
    inline-size: 100%;
    min-inline-size: 0;
}

.fl-banner-kit .fl-heading {
    display: block;
    text-wrap: balance;
}

.fl-banner-kit .fl-banner-content .fl-heading {
    box-sizing: border-box;
    display: block;
    inline-size: 100%;
    margin: 0 auto;
    max-inline-size: min(600px, 100%);
    overflow-wrap: break-word;
    text-wrap: balance;
    word-break: normal;
}

.fl-banner-kit .fl-subheading {
    text-wrap: balance;
}

.fl-banner-kit .fl-banner-content .fl-subheading {
    margin: 0 auto;
    max-inline-size: 500px;
    text-wrap: balance;
}

.fl-banner-kit .fl-superheading {
    color: var(--fl-theme-color-text);
}

.fl-banner-kit-diving-in {
    --kit-img: url('/media/img/firefox/flare/kit-dive.png');
    --kit-banner-padding-bottom: 375px;
    --kit-img-position: left -70px bottom var(--token-layout-3xs);
    --kit-img-size: min(calc(100% - calc(var(--token-layout-3xs) * 2)), 400px)
        auto;
}

.fl-banner-kit-with-qr {
    --kit-img: url('/media/img/firefox/flare/kit-qr.png');
    --kit-img-position: bottom center;
    --kit-img-size: 100% auto;
    --kit-banner-padding-bottom: calc(
        100% * 447 / 596 + var(--token-layout-md)
    );
    position: relative;
}

.fl-banner-kit-qr {
    inline-size: 45%;
    inset-block-end: 0;
    inset-inline-start: 50%;
    position: absolute;
    transform: translateX(-53%);
    z-index: 1;
}

.fl-banner-kit-qr svg {
    block-size: 100%;
    inline-size: 100%;
}

/* Override the fill color to transparent for the QR background */
.fl-banner-kit-qr svg rect[fill='white'] {
    fill: transparent;
}

@media (--viewport-sm-up) {
    .fl-banner-kit {
        --kit-img-size: min(90%, 400px) max(20%, 120px);
        --kit-banner-padding-right: var(--token-layout-md);
        --kit-banner-padding-bottom: var(--token-layout-md);
        padding: var(--token-layout-md) var(--kit-banner-padding-right)
            var(--kit-banner-padding-bottom) var(--token-layout-md);
    }

    .fl-banner-kit-diving-in .fl-banner-content {
        align-items: center;
        text-align: center;
    }

    .fl-banner-kit-diving-in .fl-buttons {
        justify-content: center;
    }

    .fl-banner-kit-diving-in {
        --kit-img-position: left calc(50% - 155px) bottom var(--token-layout-xs);
        --kit-img-size: min(60%, 450px) auto;
        --kit-banner-padding-bottom: 400px;
    }

    .fl-banner-kit-with-qr {
        --kit-img-position: bottom center;
        --kit-img-size: 60% auto;
        --kit-banner-padding-bottom: calc(
            60% * 447 / 596 + var(--token-layout-md)
        );
    }

    .fl-banner-kit-with-qr .fl-banner-content {
        align-items: center;
        text-align: center;
    }

    .fl-banner-kit-with-qr .fl-buttons {
        justify-content: center;
    }

    .fl-banner-kit-with-qr .fl-banner-kit-qr {
        inline-size: 28%;
        inset-block-end: 10px;
        inset-inline-start: 49.5%;
        transform: translateX(-53%);
    }
}

@media (--viewport-md-up) {
    .fl-banner-kit {
        --kit-banner-padding-right: var(--token-layout-lg);
        --kit-banner-padding-bottom: var(--token-layout-lg);
        padding: var(--token-layout-lg) var(--kit-banner-padding-right)
            var(--kit-banner-padding-bottom) var(--token-layout-lg);
    }

    .fl-banner-kit-diving-in {
        --kit-banner-padding-bottom: 420px;
        --kit-img-size: 550px auto;
        --kit-img-position: left calc(50% - 192px) bottom var(--token-layout-md);
        --kit-banner-padding-right: var(--token-layout-lg);
    }

    .fl-banner-kit-diving-in .fl-banner-content {
        margin: 0 auto;
        text-align: center;
    }

    .fl-banner-kit-diving-in .fl-buttons {
        justify-content: center;
    }

    .fl-banner-kit-with-qr {
        --kit-img-size: 550px auto;
        --kit-img-position: bottom center;
        --kit-banner-padding-bottom: calc(
            550px * 447 / 596 + var(--token-layout-md)
        );
        --kit-banner-padding-right: var(--token-layout-lg);
    }

    .fl-banner-kit-with-qr .fl-banner-content {
        margin: 0 auto;
        text-align: center;
    }

    .fl-banner-kit-with-qr .fl-buttons {
        justify-content: center;
    }

    .fl-banner-kit-with-qr .fl-banner-kit-qr {
        inset-block-end: 20px;
        inset-inline-start: 49.5%;
        max-inline-size: 270px;
    }
}

@media (--viewport-lg-up) {
    .fl-banner-kit-diving-in {
        --kit-img-size: 686px auto;
        --kit-img-position: left calc(50% - 240px) bottom var(--token-layout-md);
        --kit-banner-padding-bottom: 480px;
        --kit-banner-padding-right: var(--token-layout-lg);
    }

    .fl-banner-kit-with-qr {
        --kit-img-size: 686px auto;
        --kit-img-position: bottom center;
        --kit-banner-padding-bottom: calc(
            686px * 447 / 596 + var(--token-layout-md)
        );
        --kit-banner-padding-right: var(--token-layout-lg);
    }

    .fl-banner-kit-with-qr .fl-banner-kit-qr {
        inset-block-end: 20px;
        inset-inline-start: 49.5%;
        max-inline-size: 320px;
    }
}

